--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  riverpod: ^2.6.1
-  flutter_riverpod: ^2.6.1
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
   awesome_extensions: 2.0.13
-  riverpod_infinite_scroll_pagination: ^1.0.3
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  riverpod_infinite_scroll: ^1.0.11
+  infinite_scroll_pagination: ^4.1.0
 
 dev_dependencies:
   flutter_test:
